--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-    <div class="row">
+    <div class="d-flex gap-2">
         <a href="{{ path('task_create') }}" class="btn btn-success">Créer une nouvelle tâche</a>
         <a href="{{ path('task_list') }}" class="btn btn-info">Consulter la liste des tâches à faire</a>
         <a href="" class="btn btn-secondary">Consulter la liste des tâches terminées</a>
