--- a/templates/task/create.html.twig
+++ b/templates/task/create.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="row">
+    <div class="d-flex flex-column">
         {{ form_start(form, {'action' : path('task_create')}) }}
             {{ form_widget(form) }}
-
-            <button type="submit" class="btn btn-success pull-right">Ajouter</button>
+            <div class="mb-3 d-flex justify-content-between">
+                <a href="{{ path('task_list') }}" class="btn btn-primary">Retour à la liste des tâches</a>
+                <button type="submit" class="btn btn-success pull-right">Ajouter</button>
+            </div>
         {{ form_end(form) }}
-
-        <a href="{{ path('task_list') }}" class="btn btn-primary">Retour à la liste des tâches</a>
     </div>
 {% endblock %}
