--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -6,16 +6,16 @@
     <a href="{{ path('task_create') }}" class="btn btn-info pull-right">Créer une tâche</a>
     <div class="row">
         {% for task in tasks %}
-        <div class="col-sm-4 col-lg-4 col-md-4">
-            <div class="thumbnail">
+        <div class="col-sm-4 col-lg-4 col-md-4 py-2">
+            <div class="d-flex flex-column justify-content-between thumbnail shadow rounded p-2">
                 <div class="caption">
                     <h4 class="pull-right">
                         {% if task.isDone %}<span class="glyphicon glyphicon-ok"></span>{% else %}<span class="glyphicon glyphicon-remove"></span>{% endif %}
                     </h4>
                     <h4><a href="{{ path('task_edit', {'id' : task.id }) }}">{{ task.title }}</a></h4>
-                    <p>{{ task.content }}</p>
+                    <p class="text-justify">{{ task.content }}</p>
                 </div>
-                <div>
+                <div class="d-flex gap-2 justify-content-end mt-2">
                     <form action="{{ path('task_toggle', {'id' : task.id }) }}">
                         <button class="btn btn-success btn-sm pull-right">
                             {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
