--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -21,9 +21,12 @@
                             {% if not task.isDone %}Marquer comme faite{% else %}Marquer non terminée{% endif %}
                         </button>
                     </form>
-                    <form action="{{ path('task_delete', {'id' : task.id }) }}">
-                        <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
-                    </form>
+                    {# show delete button for owner author of task #}
+                    {% if app.user == task.author %}
+                        <form action="{{ path('task_delete', {'id' : task.id }) }}">
+                            <button class="btn btn-danger btn-sm pull-right">Supprimer</button>
+                        </form>
+                    {% endif %}
                 </div>
             </div>
         </div>
